--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0"
+        "php": ">=7.2.0",
+        "phpunit/php-code-coverage": "^9.2",
+        "spatie/array-to-xml": "^2.16"
     },
     "autoload": {
         "psr-0": {
@@ -19,5 +21,9 @@
         "psr-4": {
             "Marcilio\\DigitalCep\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
